k8s-apps/02-deploy/openedx/openedx-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openedx-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - <<VAR_CERT_CLUSTER_DOMAIN>>
      secretName: openedx-cert
  rules:
    - host: <<VAR_CERT_CLUSTER_DOMAIN>>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studio-openedx-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - studio.<<VAR_CERT_CLUSTER_DOMAIN>>
      secretName: studio-openedx-cert
  rules:
    - host: studio.<<VAR_CERT_CLUSTER_DOMAIN>>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - minio.<<VAR_CERT_CLUSTER_DOMAIN>>
      secretName: minio-cert
  rules:
    - host: minio.<<VAR_CERT_CLUSTER_DOMAIN>>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
